# ksp-mission-control

./: .gitignore  Cargo.toml  LICENSE  README.md  sonar-project.properties
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: probe.rs  send_launch.rs  send_maneuver.rs  send_plan_circ.rs  send_toggle.rs
kos/scripts/: launch.ks  maneuver.ks
kos/scripts/boot/: ag_listener.ks  dispatch_listener.ks
kos/scripts/lib/: launch_helpers.ks  maneuver_helpers.ks
service_definitions/: DockingCamera.json  Drawing.json  InfernalRobotics.json  KIPC.json  KRPC.json  KerbalAlarmClock.json  LiDAR.json  RemoteTech.json  SpaceCenter.json  UI.json
src/: config.rs  control.rs  krpc.rs  lib.rs  main.rs  planning.rs  web.rs
static/: index.html
